fix: 修复 medium-zoom 由于 z-index 层级问题导致图片显示异常问题

--- a/docs/.vitepress/theme/style.css
+++ b/docs/.vitepress/theme/style.css
@@ -91,11 +91,11 @@
 
 /* medium-zoom */
 .medium-zoom-overlay {
-  z-index: 20;
+  z-index: 30;
 }
 
 .medium-zoom-image {
-  z-index: 21;
+  z-index: 31;
 }
 
 /* 页面滚动渐显效果 */
